Simple crud view example 	modified:   app/index.html 	modified:   app/scripts/app.js 	modified:   app/scripts/controllers/account.js 	modified:   app/scripts/controllers/expense.js 	modified:   app/scripts/services/expense.js 	modified:   app/views/account.html 	modified:   app/views/expense.html

--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="collapse navbar-collapse" id="main-nav" data-toggle="collapse" data-target="#main-nav">
                 <ul class="nav navbar-nav">
-                    <li><a class="navbar-link" ng-href="#/">Accounts</a></li>
+                    <li><a class="navbar-link" ng-href="#/account">Accounts</a></li>
                     <li><a class="navbar-link" ng-href="#/expense"><span class="glyphicon glyphicon-plus"></span>Expense</a></li>
                     <li><a class="navbar-link" ng-href="#/income"><span class="glyphicon glyphicon-plus"></span>Income</a></li>
                     <li><a class="navbar-link" ng-href="#/settings"><span class="glyphicon glyphicon-cog"></span>Settings</a></li>
